src/objects/Doctor__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <formula>TEXT(FLOOR((TODAY()-Practicing_From__c)/365))+ &apos; Years&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Experience</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Practicing_From__c</fullName>
        <label>Practicing From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <label>Specialization</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allergists/Immunologists</fullName>
                </value>
                <value>
                    <fullName>Anesthesiologists</fullName>
                </value>
                <value>
                    <fullName>Cardiologists</fullName>
                </value>
                <value>
                    <fullName>Colon and Rectal Surgeons</fullName>
                </value>
                <value>
                    <fullName>Dermatologists</fullName>
                </value>
                <value>
                    <fullName>Family Physicians</fullName>
                </value>
                <value>
                    <fullName>Gastroenterologists</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timmings__c</fullName>
        <label>Timmings</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Doc-{000}</displayFormat>
        <label>DoctorId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>phnumvali</fullName>
        <active>false</active>
        <errorConditionFormula>OR(ISBLANK(Mobile_Number__c),NOT(REGEX(Mobile_Number__c, &quot;\\D*?(\\d\\D*?){10}&quot;)))</errorConditionFormula>
        <errorMessage>please enter valid phone number</errorMessage>
    </validationRules>
</CustomObject>